# libraries

./: CMakeLists.txt
armadillo/arm64-v8a/include/armadillo_bits/: config.hpp
armadillo/arm64-v8a/lib/pkgconfig/: armadillo.pc
armadillo/x86_64/include/armadillo_bits/: config.hpp
armadillo/x86_64/lib/pkgconfig/: armadillo.pc
cereal/: CMakeLists.txt
curl/arm64-v8a/lib/: libcurl.la
curl/arm64-v8a/lib/pkgconfig/: libcurl.pc
curl/x86_64/lib/: libcurl.la
curl/x86_64/lib/pkgconfig/: libcurl.pc
curl_build/lib/: libcurl.la
curl_build/lib/pkgconfig/: libcurl.pc
curl_build/share/man/man1/: curl.1
curl_build/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  (+470 more)
mlpack/: CMakeCache.txt
mlpack/doc/tutorials/: image.md
openssl_build/include/openssl/: configuration.h
openssl_build/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
zlib_build/lib/pkgconfig/: zlib.pc
(+1117 files in other folders)
